RESOLVED FIXED67140
Assertion failure in RenderLayer::computeRepaintRects when scrolling
https://bugs.webkit.org/show_bug.cgi?id=67140
Summary Assertion failure in RenderLayer::computeRepaintRects when scrolling
Julien Chaffraix
Reported 2011-08-29 11:08:45 PDT
r93837 added an ASSERT when calling computeRepaintRects. It looks like it is hit when scrolling, likely in the following code: RenderLayer::updateLayerPositionsAfterScroll(bool fixed) { (...) computeRepaintRects(); We do not check if the layer is visible (in which case we could likely return early as empty layers have no repaint rectangles anyway).
Attachments
WIP patch, missing baseline for mac. (5.74 KB, patch)
2011-08-29 11:41 PDT, Julien Chaffraix
no flags
Proposed fix: Bail early if we see a layer with no visible content. (8.89 KB, patch)
2011-08-29 12:24 PDT, Julien Chaffraix
no flags
Patch for landing (8.89 KB, patch)
2011-08-29 13:52 PDT, Julien Chaffraix
no flags
Julien Chaffraix
Comment 1 2011-08-29 11:41:28 PDT
Created attachment 105507 [details] WIP patch, missing baseline for mac.
Julien Chaffraix
Comment 2 2011-08-29 12:24:14 PDT
Created attachment 105509 [details] Proposed fix: Bail early if we see a layer with no visible content.
Dave Hyatt
Comment 3 2011-08-29 13:40:40 PDT
Comment on attachment 105509 [details] Proposed fix: Bail early if we see a layer with no visible content. View in context: https://bugs.webkit.org/attachment.cgi?id=105509&action=review r=me > Source/WebCore/rendering/RenderLayer.cpp:394 > + // they will be empty. If our visibility change, we are expected to recompute all Typo. Should be "changes"
Julien Chaffraix
Comment 4 2011-08-29 13:52:02 PDT
Created attachment 105518 [details] Patch for landing
WebKit Review Bot
Comment 5 2011-08-29 14:32:20 PDT
Comment on attachment 105518 [details] Patch for landing Clearing flags on attachment: 105518 Committed r94016: <http://trac.webkit.org/changeset/94016>
WebKit Review Bot
Comment 6 2011-08-29 14:32:24 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.