Assertion failure in RenderLayer::computeRepaintRects when scrolling https://bugs.webkit.org/show_bug.cgi?id=67140

Reviewed by David Hyatt.

Source/WebCore:

Test: fast/repaint/scroll-fixed-layer-with-no-visible-content.html

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::computeRepaintRects): Fixed style after r93837.

(WebCore::RenderLayer::updateLayerPositionsAfterScroll): Tweaked the code
to bail early if our layer has no visible content. This avoids the ASSERT
and also makes sense as we shouldn't repaint / update empty layers.

LayoutTests:

This test checks that a fixed element with no visible content does not ASSERT and
renders properly.

* fast/repaint/scroll-fixed-layer-with-no-visible-content-expected.txt: Added.
* fast/repaint/scroll-fixed-layer-with-no-visible-content.html: Added.
* platform/chromium-cg-mac/fast/repaint/scroll-fixed-layer-with-no-visible-content-expected.png: Added.
* platform/chromium-win/fast/repaint/scroll-fixed-layer-with-no-visible-content-expected.png: Added.
* platform/mac/fast/repaint/scroll-fixed-layer-with-no-visible-content-expected.png: Added.


Canonical link: https://commits.webkit.org/82953@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@94016 268f45cc-cd09-0410-ab3c-d52691b4dbfc